Frontend/src/assets/style/CustomComponents.css
/* =========== custom Input =========== */
.custom-input-label {
  font-size: 13px;
  margin-top: 10px;
  display: block;
}

.custom-input,
.custom-textarea {
  width: 100%;
  margin-top: 6px;
  padding: 10px;
  border-radius: 8px;
  border: 1px solid var(--border);
  background: var(--card);
  color: var(--muted-foreground);
  outline: 0;
  transition: 0.3s;
}

.custom-input:focus,
.custom-textarea:focus {
  border-color: var(--primary);
  color: var(--card-foreground);
}

.custom-input-icon:focus-within > svg {
  color: var(--primary);
}

.custom-textarea {
  height: 200px;
  resize: none;
}

.custom-input-icon {
  position: relative;
}

.custom-input-icon > svg {
  position: absolute;
  top: 17px;
  left: 10px;
  font-size: 0px;
  color: var(--muted-foreground);
  transition: 0.3s;
}

.custom-input-icon > .custom-input {
  padding-left: 32px;
  padding-right: 24px;
}

.custom-password-toggel {
  position: absolute;
  top: 17px;
  right: 10px;
  font-size: 0px;
  color: var(--muted-foreground);
  background: transparent;
  border: none;
  cursor: pointer;
}

.toggle-checkbox input[type="checkbox"] {
  width: 42px;
  height: 22px;
  appearance: none;
  background-color: var(--border);
  border-radius: 999px;
  position: relative;
  flex-shrink: 0;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.toggle-checkbox input[type="checkbox"]::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: var(--card);
  transition: transform 0.2s ease;
}

.toggle-checkbox input[type="checkbox"]:checked {
  background-color: var(--primary);
}

.toggle-checkbox input[type="checkbox"]:checked::before {
  transform: translateX(20px);
}

/* ======== TopBar Style ============ */

.custom-topbar-container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--foreground);
  background: var(--background);
  border-bottom: 1px solid var(--border);
  padding: 23px 12px;
}

.custom-topbar-inner-container {
  width: 100%;
  max-width: 1400px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--foreground);
}

.custom-topbar-title {
  font-size: 22px;
}

.custom-topbar-credit {
  display: flex;
  align-items: center;
  gap: 4px;
  cursor: pointer;
  background-color: transparent;
  transition: 0.3s;
  padding: 5px;
  border-radius: 4px;
  font-size: 15px;
  font-weight: 700;
}

.custom-topbar-credit:hover {
  background-color: var(--muted);
}
/* ======== Princing Style ============ */

.custom-pricing-card {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: space-between;
  width: 100%;
  max-width: 93vw;
  height: 100%;
  background: var(--card);
  border-radius: 15px;
  padding: 20px;
  color: var(--card-foreground);
  border: 1px solid var(--border);
}

.custom-pricing-header {
  font-size: 25px;
  color: var(--muted-foreground);
  margin-bottom: 10px;
}

.custom-pricing-price {
  display: flex;
  align-items: baseline;
  gap: 10px;
  font-size: 28px;
  font-weight: 600;
  white-space: nowrap;
  max-width: fit-content;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.custom-pricing-divider {
  border-top: 1px dashed var(--border);
  margin: 15px 0;
  width: 100%;
}

.custom-pricing-credits {
  font-size: 30px;
  font-weight: 500;
  width: 100%;
  display: flex;
}

.custom-credits-number {
  white-space: nowrap;
  max-width: fit-content;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.custom-credits-text {
  color: var(--muted-foreground);
  margin-left: 10px;
  font-size: 26px;
}

.custom-pricing-custom-credits {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: 4px;
  width: 100%;
  margin-top: 10px;
}

.custom-pricing-custom-credits > button {
  font-size: 0px;
  border: none;
  background: var(--primary);
  color: #fff;
  padding: 4px;
  border-radius: 3px;
  cursor: pointer;
}

.custom-pricing-custom-credits > button:disabled {
  background: var(--muted);
  color: var(--muted-foreground);
  cursor: not-allowed;
}

.custom-pricing-custom-credits > input {
  margin-top: 0px;
  text-align: center;
}

.custom-pricing-btn {
  width: 100%;
  margin-top: 20px;
  padding: 13px;
  border-radius: 40px;
  border: none;
  background: var(--primary);
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  letter-spacing: 2px;
  cursor: pointer;
  transition: 0.3s;
}

.custom-pricing-btn:hover {
  background: #00c29bc6;
}

/* ======== Profile Image Style ============ */
.profile-image-container {
  border-radius: 50%;
  overflow: hidden;
  cursor: pointer;
  flex-shrink: 0;
}

.profile-image-inner {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.profile-image-inner img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.profile-image-inner img.loaded {
  opacity: 1;
}

.profile-image-loader {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  background: linear-gradient(125deg, #f3f4f6 25%, #e5e7eb 37%, #f3f4f6 63%);
  animation: shimmer 9s infinite;
}

@keyframes shimmer {
  0% {
    background-position: -100px 0;
  }
  100% {
    background-position: 100px 0;
  }
}

.profile-image-fallback {
  color: var(--primary);
  font-weight: 600;
}

/* ===== Search Input ====== */

.customs-search-box {
  position: relative;
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 8px 10px;
  width: 100%;
  max-width: 98vw;
  min-width: 275px;
  background: var(--card);
  border-radius: 8px;
  border: 1px solid var(--border);
  transition: 0.3s;
}

.customs-search-box:focus-within {
  border-color: var(--primary);
  box-shadow: 0 0 0 3px rgba(2, 108, 170, 0.082);
}

.customs-search-icon {
  color: var(--border);
  transition: 0.3s;
  flex-shrink: 0;
}

.customs-search-box:focus-within > .customs-search-icon {
  color: var(--primary);
}

.customs-search-input {
  border: none;
  outline: none;
  background-color: var(--card);
  color: var(--card-foreground);
  width: 100%;
  height: 100%;
}

.custom-search-suggestions {
  position: absolute;
  top: 100%;
  left: 0px;
  width: 100%;
  flex-direction: column;
  background: var(--card);
  border: 1px solid var(--border);
  border-radius: 0px 0px 5px 5px;
  overflow: hidden;
  z-index: 1;
  box-shadow: 0px 5px 8px var(--border);
}

.custom-suggestion-items-container {
  display: flex;
  flex-direction: column;
  overflow: auto hidden;
  max-height: 150px;
}

.custom-suggestion-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 3px;
  padding: 7px 6px;
  font-size: 13px;
  cursor: pointer;
  transition: 0.3s;
}

.custom-suggestion-item:hover {
  background-color: var(--border);
}

.custom-suggestion-item-remove-btn {
  border: 1px solid transparent;
  background: var(--primary-hover);
  color: var(--primary);
  padding: 1px;
  cursor: pointer;
  border-radius: 50%;
  transition: 0.3s;
}

.custom-suggestion-item-remove-btn:hover {
  border-color: var(--primary);
}

/* ============ Load More ============ */
.custom-loadMore-container {
  margin-top: 20px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.custom-load-more-btn {
  background: var(--primary);
  color: var(--card);
  border: none;
  border-radius: 3px;
  padding: 7px 15px;
  cursor: pointer;
  transition: 0.3s;
}

.custom-load-more-btn:hover {
  transform: scale(1.02);
}

/* =========== image view model =========== */

.model-img-preview-content {
  position: relative;
  background-color: transparent;
  border-radius: 8px;
  max-width: 97vw;
  max-height: 90vh;
  overflow: auto;
  display: flex;
  flex-direction: column;
}

.image-model-close {
  position: absolute;
  top: 7px;
  right: 7px;
  z-index: 100;
  font-size: 0px;
  padding: 3px;
  border: 1px solid #fdfdfd;
  border-radius: 20px;
  color: #fdfdfd;
  background: #ffffff80;
  box-shadow: 0px 0px 8px #00000024;
  cursor: pointer;
}

.model-img-preview-content img {
  max-width: 100%;
  max-height: 90vh;
  width: auto;
  height: auto;
  object-fit: contain !important;
  opacity: 0;
  transition:
    opacity 0.3s ease,
    transform 0.3s ease;
}

.model-img-preview-content .profile-image-inner {
  overflow: hidden;
}

.model-img-preview-content .profile-image-inner img {
  transition: transform 0.2s ease;
  object-fit: contain;
}

.model-img-preview-content .profile-image-inner img.zoomed {
  transform: scale(2);
}

.model-img-preview-content .profile-image-inner img {
  transition: transform 0.3s ease;
}

.profile-image-inner img.zoomed {
  transform: scale(2);
}

